# cfd-fvm-simple-eigen

./: .gitignore  CMakeLists.txt  README.md
cmake/: ResolveEigen.cmake
data/benchmarks/: ghia_u_centerline.csv  ghia_v_centerline.csv
docs/: momentum_boundary_tables.typ  simple_solver_theory.md
include/cfd/: case.hpp  discretization.hpp  field.hpp  linear_system.hpp  mesh.hpp  output.hpp  simple_solver.hpp
results/cavity_re100/: centerline_u.csv  centerline_v.csv  p.csv  residuals.csv  summary.txt  u.csv  validation_summary.json
results/current_cavity_re100/: comparison_summary.json  v.csv  validation_summary.json
scripts/: validate_cavity.py
src/: discretization.cpp  main.cpp  mesh.cpp  output.cpp  simple_solver.cpp
tests/: test_cli_smoke.cpp  test_coefficients.cpp  test_mesh.cpp  test_simple_smoke.cpp
